@@ -26,6 +26,7 @@ Other fixes:
  - Util: Fix crash reading invalid ELFs
 Misc:
  - Qt: Renderer can be changed while a game is running
+ - Qt: Fix non-SDL build (fixes mgba.io/i/1656)
  - Switch: Make OpenGL scale adjustable while running
 
 0.8.0: (2020-01-21)
